--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "nuxt": "^3.13.0",
-    "vue": "latest",
-    "vue-router": "latest"
-  },
-  "devDependencies": {
-    "@nuxt/image": "^1.8.0",
-    "@nuxtjs/i18n": "^8.5.4",
-    "@nuxtjs/tailwindcss": "^6.12.1",
-    "nuxt-aos": "^1.2.5"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21",
+        "nuxt": "^3.13.0",
+        "particles.js": "^2.0.0",
+        "vue": "latest",
+        "vue-router": "latest"
+    },
+    "devDependencies": {
+        "@nuxt/image": "^1.8.0",
+        "@nuxtjs/i18n": "^8.5.4",
+        "@nuxtjs/tailwindcss": "^6.12.1",
+        "less": "^4.2.0",
+        "nuxt-aos": "^1.2.5"
+    }
 }
