--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vue-router": "latest"
     },
     "devDependencies": {
+        "@nuxt/icon": "^1.5.1",
         "@nuxt/image": "^1.8.0",
         "@nuxtjs/i18n": "^8.5.4",
         "@nuxtjs/tailwindcss": "^6.12.1",
