--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "nuxt": "^3.13.0",
         "particles.js": "^2.0.0",
         "vue": "latest",
+        "nprogress": "^0.2.0",
         "vue-router": "latest"
     },
     "devDependencies": {
