--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
+        "axios": "^1.7.7",
         "lodash": "^4.17.21",
+        "nprogress": "^0.2.0",
         "nuxt": "^3.13.0",
         "particles.js": "^2.0.0",
         "vue": "latest",
-        "nprogress": "^0.2.0",
         "vue-router": "latest"
     },
     "devDependencies": {
