--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue-router": "latest"
     },
     "devDependencies": {
+        "@iconify-json/bi": "^1.2.0",
         "@nuxt/icon": "^1.5.1",
         "@nuxt/image": "^1.8.0",
         "@nuxtjs/i18n": "^8.5.4",
