--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@iconify-json/bi": "^1.2.0",
         "@nuxt/icon": "^1.5.1",
         "@nuxt/image": "^1.8.0",
+        "@nuxtjs/color-mode": "^3.5.1",
         "@nuxtjs/i18n": "^8.5.4",
         "@nuxtjs/tailwindcss": "^6.12.1",
         "less": "^4.2.0",
