--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@nuxt/icon": "^1.5.1",
         "@nuxt/image": "^1.8.0",
         "@nuxtjs/color-mode": "^3.5.1",
+        "@nuxtjs/device": "^3.2.4",
         "@nuxtjs/i18n": "^8.5.4",
         "@nuxtjs/tailwindcss": "^6.12.1",
         "less": "^4.2.0",
